Fix mobile layout issue

--- a/src/About.css
+++ b/src/About.css
@@ -25,3 +25,9 @@
 .story em {
   float: none;
 }
+
+@media (max-width: 480px) {
+  .yogaphoto {
+    max-height: inherit;
+  }
+}
