--- a/src/App.css
+++ b/src/App.css
@@ -3,14 +3,14 @@
 html,
 body {
   height: 100%;
+  padding: 0;
+  margin: 0;
 }
 body {
   font-family: "Alice", serif;
   font-weight: lighter;
   color: rgb(63, 62, 62);
   background-color: #f6f5f5;
-  padding: 0;
-  margin: 0;
   display: flex;
   flex-direction: column;
 }
@@ -94,19 +94,5 @@ div .title {
 @media (max-width: 480px) {
   img {
     width: 100%;
-  }
-  .yogaphoto {
-    max-height: inherit;
-  }
-
-  #header {
-    line-height: 80px;
-  }
-  #header-title {
-    display: block;
-    text-align: center;
-  }
-  #logo {
-    margin-bottom: -32px;
   }
 }
