--- a/src/Header.css
+++ b/src/Header.css
@@ -1,7 +1,3 @@
-#header .container {
-  max-width: 600px;
-}
-
 #header {
   background-color: #d3e0ea;
   line-height: 128px;
@@ -19,4 +15,17 @@
 }
 #header .container {
   max-width: 600px;
+}
+
+@media (max-width: 480px) {
+  #header {
+    line-height: 80px;
+  }
+  #header-title {
+    display: block;
+    text-align: center;
+  }
+  #logo {
+    margin-bottom: -24px;
+  }
 }
